@@ -11,6 +11,8 @@
  - added notification for comments (lupin/goffy)
  - fixed bug with notification include (lupin/goffy)
  - added notification for comments on image level (lupin/goffy)
+ - changed redir after notification update (lupin/goffy)
+ - updated italian language (lupin/goffy)
 
 <h5>1.14 RC1</h5>  [2019/11/09]
 <hr>
